fixes for side menu covering elements by allowing user to move it up and down.

--- a/vipr-portal/portal/public/stylesheets/content.less
+++ b/vipr-portal/portal/public/stylesheets/content.less
@@ -1158,7 +1158,7 @@ ul.guide-steps > li:first-child > div.step-circle::before {
 }
 
 .wizard-side {
-    top: 50px;
+    top: 45px;
     right: 0;
     background-color: rgba(0, 0, 0, 0.75);
     color: white;
@@ -1166,6 +1166,12 @@ ul.guide-steps > li:first-child > div.step-circle::before {
     width: 306px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    cursor: grab;
+    cursor: -webkit-grab;
+}
+
+.wizard-side-move-content {
+    margin-top:20px;
 }
 
 .wizard-full {
@@ -1214,8 +1220,7 @@ ul.guide-steps > li:first-child > div.step-circle::before {
     color: white;
     border: none;
     font-size: 13px;
-    top: 48px !important;
-    left: -210px !important;
+    top: 64px !important;
 }
 
 .popover.bottom .arrow:after {
